--- a/features/bmi/src/main/res/layout/activity_bmi_main.xml
+++ b/features/bmi/src/main/res/layout/activity_bmi_main.xml
@@ -46,6 +46,6 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
-        android:text="@string/check" />
+        android:text="@string/confirm" />
 
 </LinearLayout>
