--- a/common/src/main/res/values/colors.xml
+++ b/common/src/main/res/values/colors.xml
@@ -2,4 +2,11 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="buttonGray">#f2f2f2</color>
+    <color name="buttonPressGray">#e2e2e2</color>
+    <color name="backgroundWhite">#fcfcfc</color>
+    <color name="textColor">#555555</color>
+    <color name="buttonGreen">#7aaf3b</color>
+    <color name="buttonPressGreen">#618c2f</color>
 </resources>
