Feat : AudioRecorder 기능 구현(2/2) completed.

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,4 +10,7 @@
 
     <color name="pomodoro_red">#FFD32F2F</color>
 
+    <color name="gray">#FFBDBDBD</color>
+    <color name="light_gray">#FFEFEFEF</color>
+    <color name="dark_gray">#FF212121</color>
 </resources>
