--- a/features/AudioRecorder/src/main/res/layout/activity_recorder_main.xml
+++ b/features/AudioRecorder/src/main/res/layout/activity_recorder_main.xml
@@ -4,25 +4,39 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    tools:background="@color/dark_gray"
     tools:context=".RecorderMainActivity">
 
-    <Button
+    <com.terry.recorder.SoundVisualizerView
+        android:id="@+id/soundVisualizerView"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="10dp"
+        app:layout_constraintBottom_toTopOf="@id/recordTimeTextView"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <androidx.appcompat.widget.AppCompatButton
         android:id="@+id/resetButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:background="@color/white"
         android:text="RESET"
+        android:textColor="@color/pomodoro_red"
         app:layout_constraintBottom_toBottomOf="@id/recordButton"
         app:layout_constraintEnd_toStartOf="@id/recordButton"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="@id/recordButton"
         tools:ignore="HardcodedText" />
 
-    <TextView
+    <com.terry.recorder.CountUpView
         android:id="@+id/recordTimeTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="20dp"
         android:text="00:00"
+        android:textColor="@color/white"
         app:layout_constraintBottom_toTopOf="@id/recordButton"
         app:layout_constraintEnd_toEndOf="@id/recordButton"
         app:layout_constraintStart_toStartOf="@id/recordButton"
@@ -33,8 +47,12 @@
         android:layout_width="100dp"
         android:layout_height="100dp"
         android:layout_marginBottom="50dp"
+        android:padding="25dp"
+        android:scaleType="fitCenter"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent" />
+        app:layout_constraintStart_toStartOf="parent"
+        tools:background="@drawable/shape_oval_button"
+        tools:src="@drawable/ic_record" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
