Feat : 기본 기능 구성(home, back, forward)

--- a/features/WebViewer/src/main/res/layout/activity_web_viewer_main.xml
+++ b/features/WebViewer/src/main/res/layout/activity_web_viewer_main.xml
@@ -48,6 +48,7 @@
             android:id="@+id/addressBar"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:imeOptions="actionDone"
             android:importantForAutofill="no"
             android:inputType="textUri"
             app:layout_constraintBottom_toBottomOf="parent"
