Feat : Alarm 기본 레이아웃 구성 완료
Signed-off-by: Terry <choir0118@gmail.com>

--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -32,4 +32,9 @@
         <item name="android:statusBarColor">@color/white</item>
         <item name="android:windowLightStatusBar">true</item>
     </style>
+
+    <style name="Theme.AndroidStandardLevel.Alarm" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+        <item name="android:statusBarColor">#222222</item>
+        <item name="android:windowLightStatusBar">false</item>
+    </style>
 </resources>
