Feat : Firebase DB와 연동하여 홈에서 데이터를 보여주기 구현
Signed-off-by: Terry <choir0118@gmail.com>

--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -37,4 +37,10 @@
         <item name="android:statusBarColor">#222222</item>
         <item name="android:windowLightStatusBar">false</item>
     </style>
+
+    <style name="Theme.AndroidStandardLevel.Transaction" parent="Theme.MaterialComponents.Light.NoActionBar">
+        <item name="android:statusBarColor">@color/white</item>
+        <item name="android:windowLightStatusBar">true</item>
+    </style>
+
 </resources>
