Feat : 글 추가 기능 구현
- Firebase DB 에 업로드 기능

Signed-off-by: Terry <choir0118@gmail.com>

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -21,4 +21,7 @@
     <color name="textColor">#555555</color>
     <color name="buttonGreen">#7aaf3b</color>
     <color name="buttonPressGreen">#618c2f</color>
+
+    <color name="orange">#f27f35</color>
+
 </resources>
