Feat : 이미지 업로드 기능 추가
- Firebase Storage 로 기능 구현

Signed-off-by: Terry <choir0118@gmail.com>

--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -38,7 +38,7 @@
         <item name="android:windowLightStatusBar">false</item>
     </style>
 
-    <style name="Theme.AndroidStandardLevel.Transaction" parent="Theme.MaterialComponents.Light.NoActionBar">
+    <style name="Theme.AndroidStandardLevel.Transaction.NoActionBar" parent="Theme.MaterialComponents.Light.NoActionBar">
         <item name="android:statusBarColor">@color/white</item>
         <item name="android:windowLightStatusBar">true</item>
     </style>
