--- a/features/Transaction/src/main/res/layout/activity_add_article.xml
+++ b/features/Transaction/src/main/res/layout/activity_add_article.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -50,6 +51,7 @@
         android:layout_height="wrap_content"
         android:layout_marginHorizontal="16dp"
         android:hint="@string/price"
+        android:inputType="numberDecimal"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/titleEditText" />
@@ -57,9 +59,9 @@
     <Button
         android:id="@+id/imageRegisterButton"
         android:layout_width="0dp"
+        android:layout_height="wrap_content"
         android:backgroundTint="@color/orange"
         android:text="@string/register_image"
-        android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="@id/photoImageView"
         app:layout_constraintStart_toStartOf="@id/photoImageView"
         app:layout_constraintTop_toBottomOf="@id/photoImageView" />
@@ -84,5 +86,17 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
+
+    <ProgressBar
+        android:id="@+id/progressBar"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:visibility="gone"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:visibility="visible" />
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
