--- a/features/VideoPlayer/src/main/res/layout/fragment_player.xml
+++ b/features/VideoPlayer/src/main/res/layout/fragment_player.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.motion.widget.MotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<com.terry.videoplayer.CustomVideoMotionLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/playerMotionLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -10,19 +11,19 @@
         android:id="@+id/mainContainerLayout"
         android:layout_width="0dp"
         android:layout_height="250dp"
-        android:background="@color/purple_200"
+        android:background="@color/dark_gray"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
-    <ImageView
+    <com.google.android.exoplayer2.ui.PlayerView
         android:id="@+id/playerView"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:background="#00FF00"
         app:layout_constraintBottom_toBottomOf="@id/mainContainerLayout"
         app:layout_constraintStart_toStartOf="@id/mainContainerLayout"
-        app:layout_constraintTop_toTopOf="@id/mainContainerLayout" />
+        app:layout_constraintTop_toTopOf="@id/mainContainerLayout"
+        app:resize_mode="fill" />
 
     <ImageView
         android:id="@+id/bottomPlayerControlButton"
@@ -31,7 +32,8 @@
         android:layout_marginEnd="24dp"
         app:layout_constraintBottom_toBottomOf="@id/mainContainerLayout"
         app:layout_constraintEnd_toEndOf="@id/mainContainerLayout"
-        app:layout_constraintTop_toTopOf="@id/mainContainerLayout" />
+        app:layout_constraintTop_toTopOf="@id/mainContainerLayout"
+        tools:src="@drawable/ic_play_arrow" />
 
     <TextView
         android:id="@+id/bottomTitleTextView"
@@ -41,19 +43,24 @@
         android:layout_marginEnd="12dp"
         android:ellipsize="end"
         android:maxLines="1"
+        android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="@id/bottomPlayerControlButton"
         app:layout_constraintEnd_toStartOf="@id/bottomPlayerControlButton"
         app:layout_constraintStart_toEndOf="@id/playerView"
-        app:layout_constraintTop_toTopOf="@id/bottomPlayerControlButton" />
+        app:layout_constraintTop_toTopOf="@id/bottomPlayerControlButton"
+        tools:text="제목 테스트" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerView"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:background="@color/white"
+        android:clipToPadding="false"
+        android:nestedScrollingEnabled="false"
+        android:padding="16dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/mainContainerLayout" />
 
-</androidx.constraintlayout.motion.widget.MotionLayout>
+</com.terry.videoplayer.CustomVideoMotionLayout>
