--- a/features/VideoPlayer/src/main/res/xml/fragment_player_scene.xml
+++ b/features/VideoPlayer/src/main/res/xml/fragment_player_scene.xml
@@ -5,9 +5,23 @@
     <Transition
         motion:constraintSetEnd="@+id/end"
         motion:constraintSetStart="@id/start"
-        motion:duration="1000">
+        motion:duration="300">
         <KeyFrameSet>
 
+            <KeyAttribute
+                android:alpha="0"
+                motion:framePosition="10"
+                motion:motionTarget="@+id/bottomTitleTextView" />
+            <KeyAttribute
+                android:alpha="0"
+                motion:framePosition="10"
+                motion:motionTarget="@+id/bottomPlayerControlButton" />
+            <KeyPosition
+                motion:framePosition="10"
+                motion:keyPositionType="deltaRelative"
+                motion:motionTarget="@+id/playerView"
+                motion:percentWidth="1"
+                motion:percentX="1" />
         </KeyFrameSet>
         <OnSwipe
             motion:touchAnchorId="@+id/mainContainerLayout"
@@ -70,5 +84,14 @@
             motion:layout_constraintEnd_toEndOf="parent"
             motion:layout_constraintStart_toStartOf="parent"
             motion:layout_constraintTop_toBottomOf="@id/mainContainerLayout" />
+        <Constraint
+            android:id="@+id/bottomPlayerControlButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="24dp"
+            android:alpha="0"
+            motion:layout_constraintBottom_toBottomOf="@id/mainContainerLayout"
+            motion:layout_constraintEnd_toEndOf="@id/mainContainerLayout"
+            motion:layout_constraintTop_toTopOf="@id/mainContainerLayout" />
     </ConstraintSet>
 </MotionScene>
