--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -43,4 +43,8 @@
         <item name="android:windowLightStatusBar">true</item>
     </style>
 
+    <style name="Theme.AndroidStandardLevel.AudioPlayer.NoActionBar" parent="Theme.MaterialComponents.NoActionBar">
+        <item name="android:statusBarColor">@color/audio_player_background</item>
+    </style>
+
 </resources>
