--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -47,4 +47,9 @@
         <item name="android:statusBarColor">@color/audio_player_background</item>
     </style>
 
+    <style name="Theme.AndroidStandardLevel.MotionIntro.AppBarOverlay" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+        <item name="android:textColorPrimary">@color/white</item>
+        <item name="android:textColorSecondary">@color/black</item>
+    </style>
+
 </resources>
