Feat : Initialize Appbar & Image Motion layout
Signed-off-by: Terry <choir0118@gmail.com>

--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -52,4 +52,9 @@
         <item name="android:windowLightStatusBar">true</item>
     </style>
 
+    <style name="Theme.AndroidStandardLevel.MotionIntro.AppBarOverlay" parent="Theme.MaterialComponents.DayNight.NoActionBar">
+        <item name="android:textColorPrimary">@color/white</item>
+        <item name="android:textColorSecondary">@color/black</item>
+    </style>
+
 </resources>
