Feat : Complete MVC Architecture
Signed-off-by: Terry <choir0118@gmail.com>

--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -47,4 +47,9 @@
         <item name="android:statusBarColor">@color/audio_player_background</item>
     </style>
 
+    <style name="Theme.AndroidStandardLevel.Architecture.NoActionBar" parent="Theme.MaterialComponents.NoActionBar">
+        <item name="android:statusBarColor">@color/white</item>
+        <item name="android:windowLightStatusBar">true</item>
+    </style>
+
 </resources>
