Feat : MotionIntro Module Completed
Signed-off-by: Terry <choir0118@gmail.com>

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -32,4 +32,9 @@
     <color name="audio_player_seek_bar_background">#D8D8D8</color>
 
     <color name="red">#BD0000</color>
+    <color name="white_60">#99FFFFFF</color>
+
+    <color name="yellow">#FFFFFF00</color>
+    <color name="green">#FF00FF00</color>
+    <color name="blue">#FF0000FF</color>
 </resources>
